--- a/category.html
+++ b/category.html
@@ -30,7 +30,7 @@ Here we generate all the categories.
 {% endfor %}
 
 <h1 class="page-title">
-  <a href="/blog">Blog</a> | {{ page.title }}
+  {{ page.title }}
 </h1>
 <br/>
 
@@ -48,15 +48,13 @@ Here we generate all the categories.
   {% for post in site.posts %}
   {% if post.category contains ct %}
   <li>
-    <h3>
       <a href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
-      </a>
+      </a><br>
       {% for tag in post.tags %}
-      <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+      <a class="button" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
-    </h3>
   </li>
   {% endif %}
   {% endfor %}
@@ -68,7 +66,6 @@ Here we generate all the categories.
   {% for post in site.posts %}
   {% unless post.category %}
   <li>
-    <h3>
       <a href="{{ post.url }}">
         {{ post.title }}
         <small>{{ post.date | date_to_string }}</small>
@@ -76,7 +73,6 @@ Here we generate all the categories.
       {% for tag in post.tags %}
       <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
       {% endfor %}
-    </h3>
   </li>
   {% endunless %}
   {% endfor %}
