--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
       {{ post.excerpt | number_of_words }}
     {% endcapture %}
     {% if excerpt_words != content_words %}
-    <p><a class="btn btn-sm btn-primary" href="{{ post.url }}" role="button">Read more <i class="fa fa-arrow-circle-right"></i></a>
+    <p><a class="btn btn-sm btn-primary" href="{{ post.url }}" role="button">Selengkapnya <i class="fa fa-arrow-circle-right"></i></a>
     </p>
     {% endif %}
     <div class="panel-footer">
@@ -30,7 +30,7 @@ title: Home
     {% assign taglist = post.tags | sort %}
     {% for tag in taglist | order: descending %}
     <small>
-      <a class="text-dblue" href="/tag/#{{ tag | cgi_escape }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+      <a class="button" href="/tag/#{{ tag | cgi_escape }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
       {% if forloop.last != true %}, {% endif %}
     </small>
     {% endfor %}
