--- a/tag.html
+++ b/tag.html
@@ -41,18 +41,22 @@ Here we generate all the tags.
 {% endfor %}
 
 {% for tag in tags %}
-<h2 id="{{ tag | slugify }}">{{ tag }}</h2>
-<ul>
+<h3 class="tags-header" id="{{ tag | slugify }}">{{ tag }}</h3>
+
+<ul class="related-posts">
   {% for post in site.posts %}
   {% if post.tags contains tag %}
   <li>
-      <a href="{{ post.url }}">
+      <h3><a href="{{ post.url }}">
         {{ post.title }}
-        <small>{{ post.date | date_to_string }}</small>
-      </a>
-      {% for tag in post.tags %}
-      <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+        {{ post.date | date_to_string }}
+      </a></h3>
+      {% comment %}
+      {% for tag in post.tags | order: descending %}
+      <a class="tags" href="/tag/#{{ tag | cgi_escape }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+      {% if forloop.last != true %} / {% endif %}
       {% endfor %}
+      {% endcomment %}
   </li>
   {% endif %}
   {% endfor %}
