new post, michel alexandre salim

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Home
 
     <div class="panel-footer">
     {% assign taglist = post.tags | sort %}
-    {% for tag in taglist | order: descending %}
+    {% for tag in taglist %}
       <a class="tags" href="/tag/#{{ tag | cgi_escape }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
       {% if forloop.last != true %} / {% endif %}
     {% endfor %}
