--- a/tag.html
+++ b/tag.html
@@ -52,7 +52,7 @@ Here we generate all the tags.
         {{ post.date | date_to_string }}
       </a></h3>
       {% comment %}
-      {% for tag in post.tags | order: descending %}
+      {% for tag in post.tags %}
       <a class="tags" href="/tag/#{{ tag | cgi_escape }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
       {% if forloop.last != true %} / {% endif %}
       {% endfor %}
